# alloylens

./: .gitignore  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml
.ipynb_checkpoints/: example-checkpoint.ipynb
examples/: example.html  example.ipynb
src/alloylens/: __init__.py  conversions.py  test.py  ui.py  widget.py
src/alloylens/css/: mywidget.css
src/alloylens/js/: mywidget.js  vis.js
src/alloylens/js-build/: mywidget.js  mywidget.js.map
